Tue May 08 09:59:25 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* java-swig/Makefile.am: Remove now superfluous old check that SWIG
	  generated at least the sources we wanted - we now check it generated
	  *exactly* the sources we wanted.

Tue May 08 09:48:29 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* csharp/Makefile.am,java-swig/Makefile.am: Use diff's -c option when
	  comparing the files SWIG generated against those we were expecting to
	  get as the output should be easier to understand.

Tue May 08 09:08:18 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* lua/smoketest.lua: Improve expect() function to take an option
	  failure message, to report how values differed, and to compare tables
	  in a smarter way.  Part of patch from istr in #593.

Tue May 08 09:03:46 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* perl/t/thread.t,perl/t/writabledatabase.t: Remove #! lines with -W
	  to fix "Name "Test::More::TODO" used only once: possible typo at
	  /usr/share/perl/5.14/Exporter/Heavy.pm line 190." warnings.

Tue May 08 09:02:09 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* perl/util.i.in: Avoid importing isa from UNIVERSAL to fix Perl 5.12
	  deprecation warning.

Wed Apr 04 14:14:31 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* python/docs/examples/simpleexpand.py: Update to not use deprecated
	  MSet iteration features which have been removed on trunk.  This
	  also fixes a segfault if there are no matches and no documents
	  are explicitly marked as relevant.

Thu Mar 08 07:34:40 GMT 2012  Olly Betts <olly@survex.com>

	* perl/t/databasemodified.t,perl/t/index.t,perl/t/writabledatabase.t:
	  Fix "Use of qw(...) as parentheses is deprecated" warnings in tests
	  with Perl 5.14.  Already done for trunk.

Thu Mar 08 04:54:14 GMT 2012  Olly Betts <olly@survex.com>
